--- a/cda_zandvoort_bewustwordingsspel(4).html
+++ b/cda_zandvoort_bewustwordingsspel(4).html
@@ -18,7 +18,8 @@
     }
 
     #cda-dorpsquiz {
-      min-height: 100vh;
+      min-height: 100dvh;
+      width: 100%;
       background: radial-gradient(circle at top, #f2d7a0 0, #ffffff 40%, #b7e3ff 100%);
       padding: 12px 16px 24px;
     }
@@ -247,7 +248,7 @@
     }
 
     #cda-dorpsquiz .question-text {
-      font-size: 17px;
+      font-size: 18px;
       line-height: 1.4;
       color: #10211c;
       margin-bottom: 14px;
@@ -268,6 +269,7 @@
     }
 
     #cda-dorpsquiz .option {
+      min-height: 52px;
       position: relative;
       border-radius: 999px;
       border: 1px solid #d0dde0;
@@ -596,7 +598,7 @@
         <div class="brand-logo" aria-hidden="true">CDA</div>
         <div class="brand-text">
           <h1>CDA Zandvoort – Dorpsquiz</h1>
-          <p>Ontdek in 3 minuten of jij ook een <strong>Zandvoorter voor Zandvoorters</strong> bent.</p>
+          <p>Ontdek in 3 minuten of jij ook een <strong>Zandvoorter voorZandvoorters</strong> bent.</p>
         </div>
       </div>
       <div class="badge-election">
@@ -683,7 +685,7 @@
               Ik stem CDA Zandvoort
             </button>
             <span class="pill-small">
-		Van en<br><strong>voor Zandvoorters</strong>
+		Van en<br><strong>voorZandvoorters</strong>
 	</span>
           </div>
           <p class="share-text">
@@ -702,137 +704,117 @@
         if (!root) return;
 
         var quizQuestions = [
-          {
-            theme: "Wonen",
-            question:
-              "Steeds meer jongeren en gescheiden gezinnen moeten Zandvoort verlaten omdat er geen betaalbare woning is. Wat wil CDA Zandvoort?",
-            options: [
-              "Vooral dure koopappartementen bouwen voor investeerders",
-              "Doorbouwen met veel sociale en betaalbare woningen, flexwoningen voor jongeren en betere ouderenhuisvesting voor doorstroming",
-              "Minder bouwen zodat het dorp niet verandert"
-            ],
-            correctIndex: 1,
-            explanation:
-              "CDA Zandvoort wil flink doorbouwen met nadruk op betaalbare huur- en koopwoningen, flexwoningen voor jongeren en passende woningen voor senioren zodat Zandvoorters in Zandvoort kunnen blijven wonen."
-          },
-          {
-            theme: "Vervoer & bereikbaarheid",
-            question:
-              "In sommige buurten is nog steeds veel parkeerdruk. Wat is de aanpak van CDA Zandvoort?",
-            options: [
-              "Alle parkeertarieven afschaffen zodat iedereen overal kan staan",
-              "Meer ondergronds parkeren, betere parkeer-app, slimme tarieven per wijk en goede alternatieven zoals E-busjes",
-              "Alle auto’s uit het dorp weren"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Het CDA wil het parkeerbeleid verbeteren door meer ondergronds parkeren, slimmer tariefgebruik, goede bereikbaarheid voor bewoners en bezoekers én een dorpsshuttle met E-busjes."
-          },
-          {
-            theme: "Financieel gezond",
-            question:
-              "Zandvoort staat er financieel goed voor. Wat betekent dit voor de komende jaren volgens het CDA?",
-            options: [
-              "Zo veel mogelijk oppotten en weinig investeren in het dorp",
-              "Realistisch en sluitend begroten, maar wel blijven investeren in het dorp via een Strategische Investerings Agenda",
-              "De OZB fors verhogen om extra reserves op te bouwen"
-            ],
-            correctIndex: 1,
-            explanation:
-              "CDA Zandvoort wil een gezonde meerjarenbegroting combineren met investeren in wonen en leefomgeving, zonder onnodig hoge belastingdruk."
-          },
-          {
-            theme: "Participatie",
-            question:
-              "Participatie levert soms frustratie op bij inwoners. Wat wil CDA Zandvoort verbeteren?",
-            options: [
-              "Minder participatie, dan is het sneller klaar",
-              "Duidelijk vooraf zeggen waarover inwoners mogen meepraten en steeds terugkoppelen wat er met hun ideeën gebeurt",
-              "Alleen participeren via ingewikkelde digitale formulieren"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Het CDA wil laagdrempelige participatie, helder verwachtingsmanagement en goede terugkoppeling, zodat inwoners zien wat er met hun inbreng gebeurt."
-          },
-          {
-            theme: "Economie & toerisme",
-            question:
-              "Hoe kijkt CDA Zandvoort naar ondernemers en toerisme?",
-            options: [
-              "Ondernemers vooral meer regels en hogere lasten geven",
-              "Ondernemers de ruimte geven, jaarrond toerisme en nieuwe indoor-activiteiten stimuleren en meedenken in plaats van tegenwerken",
-              "Alle toeristische activiteiten beperken tot de zomer"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Ondernemers zijn de motor van de Zandvoortse economie. Het CDA wil een betrouwbaar bestuur, ruimte voor vernieuwing en een sterker jaarrond aanbod voor dorp en bezoekers."
-          },
-          {
-            theme: "Jongeren",
-            question:
-              "Wat vindt CDA Zandvoort belangrijk voor jongeren in het dorp?",
-            options: [
-              "Weinig aandacht, jongeren vertrekken toch wel",
-              "Een jongerenraad, goede stageplekken, fijne ontmoetingsplekken én voorrang bij woningen voor Zandvoortse jongeren",
-              "Jongeren vooral naar andere gemeenten doorverwijzen"
-            ],
-            correctIndex: 1,
-            explanation:
-              "De jeugd heeft de toekomst. Het CDA wil jongeren actief betrekken bij besluiten, zorgen voor woningen, stageplekken en aantrekkelijke plekken om elkaar te ontmoeten."
-          },
-          {
-            theme: "Natuur & milieu",
-            question:
-              "Zandvoort is een groene oase. Wat is een speerpunt van CDA Zandvoort?",
-            options: [
-              "Minder groen en meer steen zodat onderhoud goedkoper wordt",
-              "Bewoners betrekken met plantsoen-adoptie, beter afvalbeheer en duurzame nieuwbouw",
-              "De natuur alleen beschermen in de duinen, niet in het dorp"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Het CDA wil Zandvoort groen houden door bewoners te betrekken bij plantsoenen, zwerfvuil aan te pakken en bouwprojecten klimaatvriendelijk te maken."
-          },
-          {
-            theme: "Meedoen & sociale zekerheid",
-            question:
-              "Wat betekent ‘meedoen’ voor CDA Zandvoort?",
-            options: [
-              "Iedereen moet het zelf maar uitzoeken",
-              "Zorg voor bestaanszekerheid, oog voor stille armoede en een menselijke benadering in het sociaal domein",
-              "Alle ondersteuning volledig digitaliseren zonder persoonlijk contact"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Het CDA staat voor een sterke sociale basis: persoonlijke aandacht, bestaanszekerheid en ondersteuning voor wie dat nodig heeft."
-          },
-          {
-            theme: "Samenleving & veiligheid",
-            question:
-              "Wat wil CDA Zandvoort rond veiligheid in het dorp?",
-            options: [
-              "Minder handhaving om geld te besparen",
-              "Zichtbare en daadkrachtige handhaving tegen overlast, vandalisme en vuurwerk, met een vaste basis in Zandvoort zelf",
-              "Alleen reageren op meldingen van toeristen"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Veiligheid en respectvol samenleven horen bij een hechte dorpsgemeenschap. Het CDA wil dat handhaving zichtbaar aanwezig en goed bereikbaar is."
-          },
-          {
-            theme: "Onderwijs & sport",
-            question:
-              "Hoe verbindt CDA Zandvoort onderwijs en sport met het dorp?",
-            options: [
-              "Scholen en verenigingen zoveel mogelijk aan hun lot overlaten",
-              "Samenwerking met scholen, sportclubs en ondernemers versterken, sport inzetten voor gezondheid en jaarrond evenementen organiseren",
-              "Alle sportfaciliteiten privatiseren"
-            ],
-            correctIndex: 1,
-            explanation:
-              "Het CDA wil goed onderwijs, sterke sportverenigingen en sport inzetten voor gezondheid, ontmoeting én jaarrond activiteiten in Zandvoort."
-          }
-        ];
+  {
+    theme: "Wonen",
+    question: "Steeds meer jongeren en gescheiden gezinnen moeten Zandvoort verlaten omdat er geen betaalbare woning is. Wat wil CDA Zandvoort?",
+    options: [
+      "Doorbouwen met sociale en betaalbare woningen, flexwoningen voor jongeren en passende woningen voor senioren",
+      "Vooral investeren in dure koopappartementen die aantrekkelijk zijn voor beleggers",
+      "De woningbouw beperken om het dorp zo veel mogelijk te houden zoals het nu is"
+    ],
+    correctIndex: 0,
+    explanation: "CDA Zandvoort wil dat Zandvoorters in Zandvoort kunnen blijven wonen door gericht te bouwen voor jongeren, gezinnen en senioren."
+  },
+  {
+    theme: "Vervoer & bereikbaarheid",
+    question: "In sommige buurten is de parkeerdruk hoog. Wat is volgens CDA Zandvoort de beste aanpak?",
+    options: [
+      "Auto’s zoveel mogelijk weren uit het dorp, ook voor bewoners",
+      "Slim parkeerbeleid met ondergronds parkeren, wijkgerichte tarieven en goede alternatieven zoals E-busjes",
+      "Parkeren volledig gratis maken zodat iedereen overal kan staan"
+    ],
+    correctIndex: 1,
+    explanation: "Het CDA kiest voor slimme oplossingen die bereikbaarheid verbeteren zonder extra overlast voor bewoners."
+  },
+  {
+    theme: "Financieel gezond",
+    question: "Zandvoort staat er financieel goed voor. Wat betekent dat volgens het CDA?",
+    options: [
+      "Extra reserves opbouwen door belastingen fors te verhogen",
+      "Voorzichtig zijn en zo min mogelijk investeren in het dorp",
+      "Verantwoord begroten én blijven investeren via een Strategische Investeringsagenda"
+    ],
+    correctIndex: 2,
+    explanation: "Een gezonde begroting biedt ruimte om te investeren in wonen, leefomgeving en voorzieningen."
+  },
+  {
+    theme: "Participatie",
+    question: "Participatie roept soms frustratie op bij inwoners. Wat wil CDA Zandvoort verbeteren?",
+    options: [
+      "Duidelijk aangeven waarover inwoners kunnen meepraten en terugkoppelen wat er met ideeën gebeurt",
+      "Participatie beperken zodat besluiten sneller genomen kunnen worden",
+      "Inwoners alleen laten participeren via digitale formulieren"
+    ],
+    correctIndex: 0,
+    explanation: "Heldere spelregels en goede terugkoppeling zorgen voor vertrouwen en betrokkenheid."
+  },
+  {
+    theme: "Economie & toerisme",
+    question: "Hoe kijkt CDA Zandvoort naar ondernemers en toerisme?",
+    options: [
+      "Toerisme vooral beperken tot de zomermaanden",
+      "Ondernemers ondersteunen, jaarrond toerisme stimuleren en meedenken in plaats van tegenwerken",
+      "Meer regels invoeren en lasten verhogen voor ondernemers"
+    ],
+    correctIndex: 1,
+    explanation: "Ondernemers zijn belangrijk voor werkgelegenheid en leefbaarheid in Zandvoort."
+  },
+  {
+    theme: "Jongeren",
+    question: "Wat vindt CDA Zandvoort belangrijk voor jongeren in het dorp?",
+    options: [
+      "Jongeren vooral voorbereiden op wonen en werken buiten Zandvoort",
+      "Vooral investeren in voorzieningen voor ouderen",
+      "Een jongerenraad, ontmoetingsplekken, stageplaatsen en kansen op een woning in het eigen dorp"
+    ],
+    correctIndex: 2,
+    explanation: "Jongeren zijn de toekomst van Zandvoort en verdienen kansen om hier te blijven."
+  },
+  {
+    theme: "Natuur & milieu",
+    question: "Zandvoort ligt midden in een unieke natuurlijke omgeving. Wat is een speerpunt van CDA Zandvoort?",
+    options: [
+      "Groen behouden door bewoners te betrekken, duurzaam te bouwen en afval beter aan te pakken",
+      "Groen opofferen om ruimte te maken voor extra bebouwing",
+      "Natuur alleen beschermen buiten de bebouwde kom"
+    ],
+    correctIndex: 0,
+    explanation: "Samen met inwoners werken aan een groen en leefbaar dorp staat centraal."
+  },
+  {
+    theme: "Meedoen & sociale zekerheid",
+    question: "Wat betekent ‘meedoen’ voor CDA Zandvoort?",
+    options: [
+      "Ondersteuning zoveel mogelijk digitaliseren zonder persoonlijk contact",
+      "Zorg voor bestaanszekerheid, aandacht voor stille armoede en een menselijke benadering",
+      "Iedereen zelf verantwoordelijk maken zonder hulp van de gemeente"
+    ],
+    correctIndex: 1,
+    explanation: "Een sterke samenleving laat niemand aan de kant staan."
+  },
+  {
+    theme: "Samenleving & veiligheid",
+    question: "Wat wil CDA Zandvoort doen om de veiligheid in het dorp te versterken?",
+    options: [
+      "Handhaving verminderen om kosten te besparen",
+      "Alleen optreden bij grote incidenten",
+      "Zichtbare en daadkrachtige handhaving tegen overlast en vandalisme"
+    ],
+    correctIndex: 2,
+    explanation: "Zichtbare handhaving draagt bij aan een veilig en prettig dorp."
+  },
+  {
+    theme: "Onderwijs & sport",
+    question: "Hoe wil CDA Zandvoort onderwijs en sport verbinden met het dorp?",
+    options: [
+      "Sportverenigingen en scholen zoveel mogelijk zelfstandig laten opereren",
+      "Samenwerking versterken en sport inzetten voor gezondheid en ontmoeting",
+      "Sportvoorzieningen vooral commercieel exploiteren"
+    ],
+    correctIndex: 1,
+    explanation: "Onderwijs en sport zijn onmisbaar voor een vitaal en verbonden Zandvoort."
+  }
+];
 
         var themeSummaries = {
           "Wonen": {
