--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <div id="cda-dorpsquiz">
-  <style>
+  <style>html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
     :root {
       --cda-green: #007b5e;
       --cda-green-dark: #005844;
@@ -18,22 +24,22 @@
     }
 
     #cda-dorpsquiz {
-      position: fixed;
-      inset: 0;
+      min-height: 100dvh;
       width: 100%;
-      height: 100svh;
-      height: -webkit-fill-available;
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
       background: radial-gradient(circle at top, #f2d7a0 0, #ffffff 40%, #b7e3ff 100%);
-      padding: env(safe-area-inset-top) env(safe-area-inset-right)
-               env(safe-area-inset-bottom) env(safe-area-inset-left);
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
+      padding: calc(8px + env(safe-area-inset-top)) calc(8px + env(safe-area-inset-right))
+               calc(8px + env(safe-area-inset-bottom)) calc(8px + env(safe-area-inset-left));
     }
 
     #cda-dorpsquiz .app {
       width: 100%;
       max-width: 980px;
       margin: 0 auto;
+      min-height: 100%;
+      flex: 1 1 auto;
       background: rgba(255, 255, 255, 0.96);
       border: 3px solid #f2d7a0; /* subtiele zandkleur rand */
       border-radius: 24px;
@@ -53,16 +59,14 @@
 
     @media (max-width: 600px) {
       #cda-dorpsquiz {
-      position: fixed;
-      inset: 0;
+      min-height: 100dvh;
       width: 100%;
-      height: 100svh;
-      height: -webkit-fill-available;
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
       background: radial-gradient(circle at top, #f2d7a0 0, #ffffff 40%, #b7e3ff 100%);
-      padding: env(safe-area-inset-top) env(safe-area-inset-right)
-               env(safe-area-inset-bottom) env(safe-area-inset-left);
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
+      padding: calc(8px + env(safe-area-inset-top)) calc(8px + env(safe-area-inset-right))
+               calc(8px + env(safe-area-inset-bottom)) calc(8px + env(safe-area-inset-left));
     }
 
       #cda-dorpsquiz .app {
@@ -605,14 +609,7 @@
       border-radius: 999px;
       font-size: 11px;
     }
-  html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-</style>
+  </style>
 
   <div class="app" role="application" aria-label="Bewustwordingsspel CDA Zandvoort">
     <header>
