--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
             <div class="cta-inline">
               <button type="button" class="btn-primary"
-                onclick="window.open('https://www.cda.nl/lid-worden/','_blank','noopener,noreferrer');">
+                onclick="window.open('https://www.cda.nl/noord-holland/zandvoort/','_blank','noopener,noreferrer');">
                 Ik stem CDA Zandvoort
               </button>
 
@@ -961,3 +961,4 @@
   </script>
 </body>
 </html>
+
